Whenever possible, use relative paths for SIZE requests, e.g. SIZE foo/bar.txt

BUG: 326292
FIXED-IN: 4.12.4
REVIEW: 116524