kioslave/ftp/ftp.cpp
@@ -2265,11 +2265,24 @@ bool Ftp::ftpSize( const QString & path, char mode )
   if( !ftpDataMode(mode) )
       return false;
 
+  // Some servers do not allow absolute path for SIZE; so we use
+  // relative paths whenever possible. #326292
+  QString currentPath(m_currentPath);
+  if (!currentPath.endsWith(QLatin1Char('/'))) {
+    currentPath += QLatin1Char('/');
+  }
+
   QByteArray buf;
   buf = "SIZE ";
-  buf += remoteEncoding()->encode(path);
-  if( !ftpSendCmd( buf ) || (m_iRespType != 2) )
-    return false;
+  if (path.startsWith(currentPath)) {
+    buf += remoteEncoding()->encode(path.mid(currentPath.length()));
+  } else {
+    buf += remoteEncoding()->encode(path);
+  }
+
+  if (!ftpSendCmd(buf) || m_iRespType != 2) {
+      return false;
+  }
 
   // skip leading "213 " (response code)
   QByteArray psz (ftpResponse(4));
